Release 02.08.2024
* Audit Trails: added management and data events for Smart Web Security.
* Billing: added instructions on how to download the payment details one-time.
* CLI: added CLI Reference Guide 0.130.0.
* Container Registry: updated instructions on working with access roles.
* DataLens: added release notes for July 2024.
* WebSQL: added release notes for July 2024.
* Translations updated.
* Fixes and improvements.